# rag-sync

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
config/: profiles.toml
scripts/: dev.sh  make_circular_icon.py
src/: api.py  artifacts.py  cli.py  config.py  db.py  glm_ocr.py  history.py  import_manifest.py  jobs.py  ldd.py  marker_batch.py  parser_experiments.py  parsers.py  queue.py  ragflow_client.py  retrieval.py  scanner.py  sync.py  visual_audit.py
src/rag_sync/: api.py  artifacts.py  cli.py  config.py  db.py  glm_ocr.py  history.py  import_manifest.py  jobs.py  ldd.py  marker_batch.py  models.py  parser_experiments.py  parsers.py  quality.py  queue.py  ragflow_client.py  retrieval.py  scanner.py  sync.py  visual_audit.py
tests/: conftest.py  test_api.py  test_artifacts_quality.py  test_cli.py  test_config.py  test_db.py  test_glm_ocr.py  test_history.py  test_import_manifest.py  test_jobs.py  test_ldd.py  test_marker_batch.py  test_marker_benchmark.py  test_marker_cluster_ui.py  test_parser_benchmark_suite.py  test_parser_experiments.py  test_parsers.py  test_queue.py  test_ragflow_client.py  test_retrieval.py  test_scanner.py  test_sync.py  test_visual_audit.py
tools/: __init__.py
tools/marker_cluster_ui/: README.md  __init__.py  run.py
tools/parser-benchmark/: README.md  benchmark.toml  benchmark_marker.py  benchmark_parsers.py  setup_parsers.sh
tools/parser_benchmark/: __init__.py  benchmark_marker.py  benchmark_suite.py
tools/parser_experiment_ui/: run.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.ts  (+9 more)
(+20 files in other folders)
