[project]
name = "rag-sync"
version = "0.1.0"
description = "Local RAGFlow ingestion sync control layer"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.3.1",
  "pymupdf>=1.26.0",
  "pillow>=12.2.0",
  "psutil>=7.2.2",
]

[project.scripts]
rag-sync = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "requests>=2.34.2",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
